--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@assenti/rui-components": "^0.8.3",
+    "@blueprintjs/core": "^3.36.0",
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.8.5",
+    "axios": "^0.21.0",
+    "blue-react": "^6.17.0",
+    "framer-motion": "^2.9.4",
+    "rc-slider": "^9.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mdl": "^2.1.0",
+    "react-neumorphic-toggle": "^1.0.1",
+    "react-range": "^1.8.3",
     "react-scripts": "4.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
